modification de la fonction filter de hamza